--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="sass.css">
+    <script src="moment.js"></script>
 </head>
 
 <body>
@@ -17,6 +18,7 @@
         <p>Current Time and Day</p>
     </div>
     <div class="hstack gap-3">
+        <p class="workTime">8:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
@@ -24,6 +26,7 @@
     </div>
     <br>
     <div class="hstack gap-3">
+        <p class="workTime">9:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
@@ -31,6 +34,7 @@
     </div>
     <br>
     <div class="hstack gap-3">
+        <p class="workTime">10:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
@@ -38,6 +42,7 @@
     </div>
     <br>
     <div class="hstack gap-3">
+        <p class="workTime">11:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
@@ -45,6 +50,7 @@
     </div>
     <br>
     <div class="hstack gap-3">
+        <p class="workTime">12:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
@@ -52,6 +58,7 @@
     </div>
     <br>
     <div class="hstack gap-3">
+        <p class="workTime">1:00</p>
         <input class="form-control me-auto" type="text" placeholder="Add an event...">
         <button type="button" class="btn btn-secondary">Submit</button>
         <div class="vr"></div>
