fixed all the blocks

--- a/index.html
+++ b/index.html
@@ -69,6 +69,39 @@
         <div class="vr"></div>
         <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
+    <br>
+    <div class="hstack gap-3">
+        <p class="workTime">2:00</p>
+        <input class="form-control me-auto" type="text" placeholder="Add an event...">
+        <button type="button" class="btn btn-secondary">Submit</button>
+        <div class="vr"></div>
+        <button type="button" class="btn btn-outline-danger">Reset</button>
+    </div>
+    <br>
+    <div class="hstack gap-3">
+        <p class="workTime">3:00</p>
+        <input class="form-control me-auto" type="text" placeholder="Add an event...">
+        <button type="button" class="btn btn-secondary">Submit</button>
+        <div class="vr"></div>
+        <button type="button" class="btn btn-outline-danger">Reset</button>
+    </div>
+    <br>
+    <div class="hstack gap-3">
+        <p class="workTime">4:00</p>
+        <input class="form-control me-auto" type="text" placeholder="Add an event...">
+        <button type="button" class="btn btn-secondary">Submit</button>
+        <div class="vr"></div>
+        <button type="button" class="btn btn-outline-danger">Reset</button>
+    </div>
+    <br>
+    <div class="hstack gap-3">
+        <p class="workTime">5:00</p>
+        <input class="form-control me-auto" type="text" placeholder="Add an event...">
+        <button type="button" class="btn btn-secondary">Submit</button>
+        <div class="vr"></div>
+        <button type="button" class="btn btn-outline-danger">Reset</button>
+    </div>
+    <br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
