--- a/index.html
+++ b/index.html
@@ -35,121 +35,141 @@
     <div class="hstack gap-3">
       <p class="workTime">8:00</p>
       <input
+        id="text8"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit1">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">9:00</p>
       <input
+        id="text9"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit2">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">10:00</p>
       <input
+        id="text10"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit3">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">11:00</p>
       <input
+        id="text11"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit4">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">12:00</p>
       <input
+        id="text12"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit5">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">1:00</p>
       <input
+        id="text13"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit6">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">2:00</p>
       <input
+        id="text14"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit7">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">3:00</p>
       <input
+        id="text15"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit8">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">4:00</p>
       <input
+        id="text16"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit9">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <div class="hstack gap-3">
       <p class="workTime">5:00</p>
       <input
+        id="text17"
         class="form-control me-auto"
         type="text"
         placeholder="Add an event..."
       />
-      <button type="button" class="btn btn-secondary">Submit</button>
+      <button type="button" class="btn btn-secondary" id="submit10">
+        Submit
+      </button>
       <div class="vr"></div>
-      <button type="button" class="btn btn-outline-danger">Reset</button>
     </div>
     <br />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
