fixed the color varitations to match time

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Timeblocks go here -->
     </div>
     <div class="hstack gap-3">
-      <p class="workTime">8:00</p>
+      <p class="workTime">8:00am</p>
       <input
         id="text8"
         class="form-control me-auto"
@@ -47,7 +47,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">9:00</p>
+      <p class="workTime">9:00am</p>
       <input
         id="text9"
         class="form-control me-auto"
@@ -61,7 +61,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">10:00</p>
+      <p class="workTime">10:00am</p>
       <input
         id="text10"
         class="form-control me-auto"
@@ -75,7 +75,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">11:00</p>
+      <p class="workTime">11:00am</p>
       <input
         id="text11"
         class="form-control me-auto"
@@ -89,7 +89,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">12:00</p>
+      <p class="workTime">12:00am</p>
       <input
         id="text12"
         class="form-control me-auto"
@@ -103,7 +103,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">1:00</p>
+      <p class="workTime">1:00pm</p>
       <input
         id="text13"
         class="form-control me-auto"
@@ -117,7 +117,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">2:00</p>
+      <p class="workTime">2:00pm</p>
       <input
         id="text14"
         class="form-control me-auto"
@@ -131,7 +131,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">3:00</p>
+      <p class="workTime">3:00pm</p>
       <input
         id="text15"
         class="form-control me-auto"
@@ -145,7 +145,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">4:00</p>
+      <p class="workTime">4:00pm</p>
       <input
         id="text16"
         class="form-control me-auto"
@@ -159,7 +159,7 @@
     </div>
     <br />
     <div class="hstack gap-3">
-      <p class="workTime">5:00</p>
+      <p class="workTime">5:00pm</p>
       <input
         id="text17"
         class="form-control me-auto"
