--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <div id="buttonReset">
+      <button type="button" class="resetbtn btn-primary btn-lg btn-block">
+        Reset
+      </button>
+    </div>
     <div class="container">
       <!-- Timeblocks go here -->
     </div>
